<resources>
    <string name="app_name">FLC</string>
    <string name="shouye">首页</string>
    <string name="weiliao">微聊</string>
    <string name="tuijian">推荐</string>
    <string name="mine">我的</string>
    <string name="jiazaizhong">加载中...</string>
    <string name="wl">微聊</string>
    <string name="sousuo">请输入查询内容</string>
    <string name="quxiao">取消</string>
    <string name="saoyisao">扫一扫</string>
    <string name="faqiweiliao">发起微聊</string>
    <string name="zhaojingjiren">找经纪人</string>
    <string name="faqi">发起微聊</string>
    <string name="xuanzelianxiren">请选择一个联系人进行微聊</string>
    <string name="searchmanager">找经纪人</string>
    <string name="manager_number">请输入经纪人手机号</string>
    <string name="search">搜索</string>
    <string name="green_saoyisao">扫一扫</string>
    <string name="yinsixieyi">隐私协议</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="phonenumber">请输入手机号</string>
    <string name="pass">请输入密码</string>
    <string name="forgetpass">忘记密码?</string>
    <string name="disanfangdenglu">第三方登录</string>
    <string name="yanzhengma">请输入验证码</string>
    <string name="surepass">请输入确认密码</string>
    <string name="zhucejibiaoshitongyi">注册即表示同意</string>
    <string name="yonghuxieyi">《用户协议》</string>
    <string name="yu">与</string>
    <string name="yinsixieyia">《隐私协议》</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="lijizhaohui">立即找回</string>
    <string name="bingphonenumber">绑定手机号</string>
    <string name="yonghuxieyititle">用户协议</string>
    <string name="mine_buyandsellhouse">买房卖房</string>
    <string name="mine_contacts">联系人</string>
    <string name="mine_lookhouserecord">看房记录</string>
    <string name="mine_historyrecord">历史记录</string>
    <string name="mine_myhouseprice">房价地图</string>
    <string name="mine_myorder">我的订单</string>
    <string name="mine_sellhousemanager">卖房管理</string>
    <string name="mine_toolservice">工具服务</string>
    <string name="mine_lookrecord">查看资产报告</string>
    <string name="mine_fangdaijisuanqi">房贷计算器</string>
    <string name="mine_myask">我的问答</string>
    <string name="mine_mybaoming">我的报名</string>
    <string name="mine_userfeedback">用户反馈</string>
    <string name="mine_newfooter">最新足迹</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="touxiang">头像</string>
    <string name="nicheng">昵称</string>
    <string name="xingbie">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birthday">生日</string>
    <string name="accountbind">账号绑定</string>
    <string name="phonebind">手机绑定</string>
    <string name="setting">设置</string>
    <string name="yunxujingjiren">允许经纪人跟我打招呼</string>
    <string name="moreyuyan">多语言</string>
    <string name="aboutapp">关于FLC</string>
    <string name="checkversion">检查版本更新</string>
    <string name="loginout">退出登录</string>
    <string name="wenjuan">问卷调查</string>
    <string name="submit">提交</string>
    <string name="userdiaoyan">用户调研报告</string>
    <string name="xiaoxixiagnqing">消息详情</string>
    <string name="wodexiaoxi">我的消息</string>
    <string name="changephone">更改手机号</string>
    <string name="pleaseinputphone">请输入手机号</string>
    <string name="inputcode">请输入验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="next">下一步</string>
    <string name="newphone">新手机号</string>
    <string name="inputphonenew">请输入需要绑定的手机号</string>
    <string name="confirmchange">确认更换</string>
    <string name="aboutus">关于我们</string>
    <string name="userxiyi">用户协议</string>
    <string name="activity_owner_title">我是业主</string>
    <string name="activity_owner_rental">租售</string>
    <string name="activity_owner_prices">房价地图</string>
    <string name="activity_owner_wikipedia">业主百科</string>
    <string name="details">详情</string>
    <string name="act_rental_rent">出租</string>
    <string name="act_rental_sell">出售</string>
    <string name="activity_free_apartment">免费看房</string>
    <string name="item_apartment_phone">电话咨询</string>
    <string name="item_apartment_signUp">参与报名</string>
    <string name="activity_rental_call">您的称呼:</string>
    <string name="activity_rental_call_hint">请输入您的姓名</string>
    <string name="activity_rental_mandatory">(必填)</string>
    <string name="activity_rental_contact">联系方式:</string>
    <string name="activity_rental_contact_hint">请输入手机号/邮箱/line</string>
    <string name="activity_rental_location">房屋位置:</string>
    <string name="activity_rental_location_hint">请输入房屋位置</string>
    <string name="activity_rental_distance">车站距离:</string>
    <string name="activity_rental_distance_hint">请输入车站距离</string>
    <string name="activity_rental_floor">楼层:</string>
    <string name="activity_rental_floor_hint">请输入楼层</string>
    <string name="floor">层</string>
    <string name="activity_rental_area">面积:</string>
    <string name="activity_rental_area_hint">请输入面积</string>
    <string name="activity_rental_pattern">格局:</string>
    <string name="activity_rental_pattern_hint">请输入格局</string>
    <string name="activity_rental_bathroom">洗手间与卫生间一体</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="activity_rental_toward">朝向:</string>
    <string name="activity_rental_toward_hint">请输入朝向</string>
    <string name="activity_rental_equipment">周边设备:</string>
    <string name="activity_rental_equipment_hint">请输入周边设备</string>
    <string name="activity_rental_upPic">上传图片:</string>
    <string name="activity_rental_upVideo">上传视频:</string>
    <string name="activity_rental_entrust">立即委托</string>
    <string name="activity_rental_rentalState">出租状态:</string>
    <string name="activity_rental_refuseReason">拒绝理由:</string>
    <string name="activity_rental_lessorName">出租人姓名:</string>
    <string name="activity_rental_lessorPhone">出租人电话:</string>
    <string name="activity_rental_bathroomTogether">洗卫一体:</string>
    <string name="activity_rental_roomPic">房源图片:</string>
    <string name="activity_rental_roomVideo">房源视频:</string>
    <string name="rent_details">出租详情</string>
    <string name="sell_details">出售详情</string>
    <string name="mine_jiaru">您加入平台已</string>
    <string name="mine_tian">天~</string>
    <string name="mine_shoucang_shoucang">收藏</string>
    <string name="mine_dingyue_dingyue">订阅</string>
    <string name="calcul_shoufu">首付：</string>
    <string name="calcul_wan">万</string>
    <string name="calcul_dkze">贷款总额：</string>
    <string name="calcul_lxzj">利息总计：</string>
    <string name="calcul_yuegong">月 供：</string>
    <string name="calcul_cxjs">重新计算</string>
    <string name="shanchu">删除</string>
    <string name="activity_about_grade">给FLC评分</string>
    <string name="activity_about_refe">FLC介绍</string>
    <string name="dialog_checkRoom_apply">报名活动</string>
    <string name="dialog_checkRoom_action">活动名称展示</string>
    <string name="dialog_checkRoom_name">请输入您的姓名</string>
    <string name="dialog_checkroom_confirm">报名</string>
    <string name="item_free_apartment_sale">待售</string>
    <string name="see_more_fy">房源信息</string>
    <string name="see_more_fymc">房源名称</string>
    <string name="see_more_xqmc">小区名称：</string>
    <string name="see_more_cx">朝向：</string>
    <string name="see_more_jznf">建筑年份：</string>
    <string name="see_more_glf">管理费：</string>
    <string name="see_more_jzgz">建筑构造：</string>
    <string name="see_more_df">电费：</string>
    <string name="see_more_sf">水费：</string>
    <string name="see_more_lc">楼层：</string>
    <string name="see_more_ys">洋室：</string>
    <string name="see_more_hs">和室：</string>
    <string name="see_more_my">沐浴一体：</string>
    <string name="see_more_glhs">管理会社：</string>
    <string name="see_more_jtwz">具体位置：</string>
    <string name="see_more_sb">设备：</string>
    <string name="see_more_ws">瓦斯：</string>
    <string name="see_more_zxcz">装修材质：</string>
    <string name="see_more_czjl">车站距离：</string>
    <string name="see_more_cwfj">窗外风景：</string>
    <string name="see_more_wg">外观：</string>
    <string name="see_more_ng">内观：</string>
    <string name="old_house">二手房</string>
    <string name="zu_house">租房</string>
    <string name="new_house">新房</string>
    <string name="tudi">土地</string>
    <string name="gaoerfu_name">泰和·金府大厦</string>
    <string name="gaoerfu_price">价格：</string>
    <string name="gaoerfu_mianji">面积：</string>
    <string name="water_more">水源充足：</string>
    <string name="dixing">地形：</string>
    <string name="turang">土壤：</string>
    <string name="huanjing">环境：</string>
    <string name="jiaotong">交通：</string>
    <string name="jutiweizhi">具体位置：</string>
    <string name="cainixihuan">猜你喜欢</string>
    <string name="dianhua">电话</string>
    <string name="haiwai_price">价格：</string>
    <string name="haiwai_mianji">面积：</string>
    <string name="haiwai_chaoxiang">朝向：</string>
    <string name="haiwai_niandai">年代：</string>
    <string name="haiwai_dianti">电梯：</string>
    <string name="haiwai_zhuangxiu">装修：</string>
    <string name="haiwai_louxing">楼型：</string>
    <string name="haiwai_xiaoqu">小区：</string>
    <string name="haiwai_jutiweizhi">具体位置：</string>
    <string name="huxingtu">户型图</string>
    <string name="fangdai">房贷计算器</string>
    <string name="benxi">等额本息</string>
    <string name="jiudian_price">价格：</string>
    <string name="jiudian_mianji">面积：</string>
    <string name="jiudian_huibaolv">回报率：</string>
    <string name="jiudian_shuiyuan">水源充足：</string>
    <string name="jiudian_louceng">楼层：</string>
    <string name="jiudian_nianfen">建筑年份：</string>
    <string name="jiudian_gouzao">建筑构造：</string>
    <string name="jiudian_turang">土壤：</string>
    <string name="jiudian_shebei">设备：</string>
    <string name="jiudian_neiguan">内观：</string>
    <string name="jiudian_waiguan">外观：</string>
    <string name="jiudian_chezhanjuli">车站距离：</string>
    <string name="jiudian_jiaotongjingdian">景点交通：</string>
    <string name="jiudian_shangyejie">商业街距离：</string>
    <string name="jiudian_jutiweizhi">具体位置：</string>
    <string name="new_house_price">价格：</string>
    <string name="see_more">更多信息</string>
    <string name="new_house_mianji">面积：</string>
    <string name="new_house_show">最新开盘·户型以及优惠信息，免费致电售楼处</string>
    <string name="new_house_bianjia">变价通知</string>
    <string name="new_house_kaipan">开盘通知</string>
    <string name="new_house_zhoubian">周边设施</string>
    <string name="new_house_shop">商场</string>
    <string name="new_house_school">学校</string>
    <string name="new_house_youeryuan">幼儿园</string>
    <string name="new_house_yiyuan">医院</string>
    <string name="old_house_price">价格：</string>
    <string name="old_house_mianji">面积：</string>
    <string name="shangpu_qingyinshi">轻饮食</string>
    <string name="shangpu_chengdong">成栋：</string>
    <string name="shangpu_stop_car">停车场：</string>
    <string name="shangpu_daizhuangxiu">带装修：</string>
    <string name="shangpu_bangong">办公用具：</string>
    <string name="shangpu_diduan">地段：</string>
    <string name="shangpu_qingyinsh">轻饮食：</string>
    <string name="tudi_shifoujiejiao">是否街角：</string>
    <string name="tudi_nengfou">能否高层建筑：</string>
    <string name="tudi_zhouwei">周围采光：</string>
    <string name="tudi_fengjing">周围风景：</string>
    <string name="tudi_chezhanjuli">车站距离：</string>
    <string name="tudi_linjie">临街距离：</string>
    <string name="shangyedichan">商业地产</string>
    <string name="daikuanmingc">贷款名称</string>
    <string name="yuexi">月息0.59%</string>
    <string name="daikuanlilv">贷款利率</string>
    <string name="edufanwei">额度范围：</string>
    <string name="daikuanzhouqi">贷款周期：</string>
    <string name="tongqinzhaofnag">通勤找房</string>
    <string name="dialog_checkRoom_phone">请输入您的手机号</string>
    <string name="queding">确定</string>
    <string name="bieshu">别墅</string>
    <string name="nindeweizhi">（您的位置）</string>
    <string name="shijianyaoqiu">时间要求</string>
    <string name="qingxuanzeshijian">请选择时间</string>
    <string name="fenzhongnei">分钟内</string>
    <string name="kaishizhaofang">开始找房</string>
    <string name="quedingtuichuma">您确定退出吗？</string>
</resources>