<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomwhite">
    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/xinfang_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_house"
            android:layout_gravity="center"
            android:textColor="@color/text_black"
            android:padding="10dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray1"/>
        <TextView
            android:id="@+id/bieshu_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bieshu"
            android:layout_gravity="center"
            android:textColor="@color/text_black"
            android:padding="10dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray1"/>
        <TextView
            android:id="@+id/ershoufang_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_house"
            android:layout_gravity="center"
            android:textColor="@color/text_black"
            android:padding="10dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray1"/>
        <TextView
            android:id="@+id/tudi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tudi"
            android:layout_gravity="center"
            android:textColor="@color/text_black"
            android:padding="10dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray1"/>
        <TextView
            android:id="@+id/zufang_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zu_house"
            android:layout_gravity="center"
            android:textColor="@color/text_black"
            android:padding="10dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray1"/>
        <TextView
            android:id="@+id/sydc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shangyedichan"
            android:layout_gravity="center"
            android:textColor="@color/text_black"
            android:padding="10dp"/>
    </LinearLayout>

</LinearLayout>