<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--<FrameLayout-->
        <!--android:id="@+id/frag_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1" />-->

    <com.haiwai.administrator.japanhouse.activity.NoScrollViewPager
        android:id="@+id/act_main_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/tab_text_normal_color"></View>

        <RadioGroup
            android:id="@+id/rgp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">
            <!--注意是drawableTop-->
            <RadioButton
                android:id="@+id/rb_home"
                style="@style/bottom_tab_style"
                android:drawableTop="@drawable/tab_home_selector"
                android:text="@string/shouye" />

            <RadioButton
                android:id="@+id/rb_chat"
                style="@style/bottom_tab_style"
                android:drawableTop="@drawable/tab_chat_selector"
                android:text="@string/weiliao" />

            <RadioButton
                android:id="@+id/rb_comment"
                style="@style/bottom_tab_style"
                android:drawableTop="@drawable/tab_comment_selector"
                android:text="@string/tuijian" />

            <RadioButton
                android:id="@+id/rb_mine"
                style="@style/bottom_tab_style"
                android:drawableTop="@drawable/tab_mine_selector"
                android:text="@string/mine" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
