<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/roundcircle"
              android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/quedingtuichuma"
        android:textColor="#343434"
        android:textSize="15sp"
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
    >
        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/quxiao"
            android:textColor="#343434"
            android:textSize="14dp"
        />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#f5f5f5"/>

        <Button
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:gravity="center"
            android:text="@string/queding"
            android:textColor="#343434"
            android:textSize="14dp"/>

    </LinearLayout>
</LinearLayout>
