<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.japanhouse.fragment.home.TongqinActivity">
    <RelativeLayout
        android:background="@color/shihuangse"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dip">
        <ImageView
            android:id="@+id/title_back_iv"
            android:src="@drawable/back"
            android:padding="10dp"
            android:layout_width="40dip"
            android:layout_height="40dip" />
        <TextView
            android:id="@+id/title_content_tv"
            android:text="@string/tongqinzhaofnag"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/location_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="上地九街"
            android:textColor="@color/text_black"
            android:padding="15dp"
            android:drawableLeft="@drawable/locaiton_yellow_iv"
            android:drawablePadding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nindeweizhi"
            android:textColor="@color/text_gray"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/location_tv"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_more_iv"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="15dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tongqinzhaofnag"
            android:textColor="@color/text_black"
            android:padding="15dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/type_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shijianyaoqiu"
                android:textColor="@color/text_black"/>
            <TextView
                android:id="@+id/time_tv"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/qingxuanzeshijian"
                android:layout_marginLeft="10dp"
                android:textColor="@color/text_gray"
                android:background="@drawable/bg_huise"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fenzhongnei"
                android:textColor="@color/text_black"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/start_find_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kaishizhaofang"
        android:gravity="center"
        android:background="@drawable/shape_tijiao"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"/>
</LinearLayout>
