<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dai_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daikuanmingc"
        android:textSize="15sp"
        android:textColor="#444444"
        android:layout_margin="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/liner"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/yuexi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuexi"
                android:textColor="#FE972A"
                android:textSize="17sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/lilv"
                android:layout_below="@+id/yuexi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daikuanlilv"
                android:textColor="#999999"
                android:textSize="14sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/liners"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edufanwei"
                    android:textSize="14sp"
                    android:textColor="#999999"
                    />

                <TextView
                    android:id="@+id/fanwei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="最高五万"
                    android:textColor="#000"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_below="@+id/liners"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daikuanzhouqi"
                    android:textSize="14sp"
                    android:textColor="#999999"
                    />

                <TextView
                    android:id="@+id/zhouqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1-36个月"
                    android:textColor="#000"
                    android:textSize="14sp"
                    />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gray1"/>

</LinearLayout>
